# quantix

./: .gitignore  CLAUDE.md  pyproject.toml
.claude/agents/: backend-programmer.md  quant-reviewer.md
backend/: main.py
backend/api/: backtests.py  charts.py  data.py  router.py  strategies.py  symbol_pools.py
backend/cli/: app.py
backend/data/: __init__.py  config.py  fetcher.py  pandas_compat.py  tgw_worker.py
backend/db/: __init__.py  factor.py  kline.py  lancedb.py  sqlite.py  symbol_pool.py
backend/engine/: __init__.py  adjust.py  backtest.py  context.py  executor.py  indicators.py  metrics.py  resample.py
backend/models/: __init__.py  backtest.py  strategy.py  symbol.py  symbol_pool.py
backend/plotting/: __init__.py  compute.py  serialize.py  types.py
docs/: architecture.md  backend-test-plan.md  engine-issues.md  frontend-test-plan.md  test-plan.md  test-summary.md
docs/strategy/: dual-ma.md  ma-breakout.md
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: App.vue  router.js  style.css
strategies/: acceleration_momentum.py  aqr_momentum.py  cross_sectional_momentum.py  dual_ma.py  dual_momentum.py  ma_breakout.py  risk_adjusted_momentum.py  rsi_momentum.py  trend_momentum.py
tests/: README.md  __init__.py  conftest.py  test_data_fetch.py
tests/test_api/: __init__.py  test_backtests.py  test_data.py  test_health.py  test_strategies.py  test_symbol_pools.py
tests/test_cli/: __init__.py  test_app.py
tests/test_db/: test_lancedb.py  test_sqlite.py
tests/test_engine/: __init__.py  test_adjust.py  test_backtest.py  test_indicators.py  test_resample.py  (+1 more)
(+23 files in other folders)
