[project]
name = "quantix"
version = "0.1.0"
description = "量化回测平台"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy>=2.0",
    "lancedb>=0.20",
    "pandas>=2.2",
    "numpy>=2.0",
    "typer>=0.15",
    "httpx>=0.28",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.ruff]
line-length = 120

[project.scripts]
quantix = "backend.cli.app:app"
